# Project-Samarth-BuildForBharat

./: LICENSE  README.md  pyproject.toml
data/: agriculture.db
src/: agent.py  main.py
src/utils/: constants.py  prompts.py
